--- a/AtividadeCurriculo.css
+++ b/AtividadeCurriculo.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Verdana, sans-serif;
     width: 80%;
     margin: auto;
     color: #070505;
@@ -14,6 +14,7 @@ h1 {
     font-size: 46px;
     margin-bottom: 0;
 }
+
 
 h2 {
     color: #611240;
@@ -35,4 +36,10 @@ li {
 
 .center {
     text-align: center;
+
+}
+
+.imagem-html {
+    float: right;
+    
 }
